dons_tests/invalid_kxi/bad_switch_type_check.kxi
void main(){
    int x = 1;
    switch (x) {
        case 'c': x = x+1;
        case 2: x = x+2;
        default: x = x;
    }
}
